Fixes z-index and margins of archived alert

--- a/app/assets/stylesheets/pages/builds.scss
+++ b/app/assets/stylesheets/pages/builds.scss
@@ -55,16 +55,16 @@
     @include build-trace();
   }
 
-  .archived-sticky {
+  .archived-job {
     top: $header-height;
     border-radius: 2px 2px 0 0;
     color: $orange-600;
     background-color: $orange-100;
     border: 1px solid $border-gray-normal;
-    border-bottom: 0;
     padding: 3px 12px;
     margin: auto;
     align-items: center;
+    z-index: 1;
 
     .with-performance-bar & {
       top: $header-height + $performance-bar-height;
